# sc2-translator

./: .gitignore  .gitmodules  GameStrings_translated.txt  README.md  build.sh  pyproject.toml
src/sc2_translator/: __init__.py  gemini.py  hotkey_fixer.py  mpq.py  path_fixer.py  sanitizer.py  tools.py
