[project]
name = "sc2-translator"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "rich>=13.7.1",
    "groq>=0.9.0",
    "typer>=0.12.3",
    "regex>=2024.7.24",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sc2_translator"]

[project.scripts]
sc2-translator = "sc2_translator:_cli_main"
path-fixer = "sc2_translator.path_fixer:_cli_main"
hotkey-fixer = "sc2_translator.hotkey_fixer:_main"